Fix : login Page alignment

--- a/Style/nav.css
+++ b/Style/nav.css
@@ -79,4 +79,6 @@
 .searchimg:hover{
     width: 22pt;
 }
-
+.spacer{
+    height: 50pt;
+}
